build/kube/app/app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stories
  labels:
    app: stories
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stories
  template:
    metadata:
      labels:
        app: stories
        role: backend
    spec:
      containers:
        - name: stories
          image: nsnikhil10/stories:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
