build/kube/app/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stories-svc
spec:
  selector:
    app: stories
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
